# CSRP

./: .gitignore  .gitmodules  README.md  TODO.md  getColorMap.ipynb  hidden_layer_extraction.ipynb  opener.ipynb  tspTest.tsp  work_layer_0.tour  work_layer_12_mi.tour
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  abelsJob.sh  cmake_install.cmake  jobLoop.sh
cpp stuff/: BMPGenerator.cpp  BMPGenerator.h  ColorScheme.cpp  ColorScheme.h  GraphReader.cpp  GraphReader.h  Image.cpp  Image.h  Makefile  SquareMatrixF.cpp  SquareMatrixF.h  Tests.cpp  Tests.h  main.cpp  work_layer_0.tour  work_layer_12.tour
cpp/src/: BMPGenerator.cpp  BMPGenerator.h  ColorScheme.h  GraphReader.cpp  GraphReader.h  Image.h  NEOSJob.cpp  NEOSJob.h  SquareMatrix.cpp  SquareMatrix.h  SquareMatrixF.cpp  SquareMatrixF.h  Tests.cpp  main.cpp
python/: automation.ipynb  automation.py  data_analysis.py  ordering_automation.py  regex_stuff.py  signature_extraction.ipynb
test graphs/: concordeTest  concordeTest.tsp
testFiles/testInputs/test graphs/: tour.cyc
testFiles/testOutputs/: writeTest.tsp
